--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
 - yarn run build
 deploy:
   provider: pages
-  skip_cleanup: false
+  skip_cleanup: true
   local_dir: ".vuepress/dist"
   github-token: $GITHUB_TOKEN
   keep_history: true
